<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main -->
    <string name="app_name">Contact Manager</string>
    <string name="windows_title">WSO2 Contact Manager</string>
    <string name="logo_description">lean.enterprise.middleware</string>

    <!-- Search activity -->
    <string name="photo_description">Photo</string>
    <string name="arrow_description">Click to see details</string>
    <string name="search">Search&#8230;</string>
    <string name="search_previous">Previous</string>
    <string name="search_next">Next</string>

    <!-- Contact activity -->
    <string name="contact_mobile_title">Mobile</string>
    <string name="contact_home_phone_title">Home</string>
    <string name="contact_mail_title">Mail</string>
    <string name="contact_address_title">Address</string>
    <string name="contact_manager_title">Manager</string>
    <string name="act_mail_description">E-mail me</string>
    <string name="act_call_description">Call me</string>
    <string name="act_sms_description">Send me an SMS</string>
    <string name="act_geolocation_description">Locate me</string>
    <string name="act_manager_description">See my manager</string>
    <string name="act_add_description">Add me</string>
    <string name="contact_warning_add_contact">Do you want to add %s to your contacts ?</string>
    <string name="product_team">Product Team</string>
    <string name="designation">Designation</string>

    <!-- Settings activity -->
    <string name="settings_title">Settings</string>
    <string name="settings_title_description">Configure, manage your server configurations.</string>
    <string name="settings_action_add">Add</string>
    <string name="settings_action_delete">Delete</string>
    <string name="settings_action_edit">Edit</string>
    <string name="settings_selection_label">Select a server</string>
    <string name="settings_selected_server_title">Host details</string>
    <string name="settings_selected_security_title">Security</string>
    <string name="settings_authentication_title">Authentication</string>
    <string name="settings_authentication_basic">Basic</string>
    <string name="settings_no_server_configuration">No server configuration found. \n\nPlease configure a new server to use the contact manager.</string>

    <!-- Actions -->
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    
    <!-- login  -->
    <string name="sw2_title">Credentials</string>
    <string name="sw2_account_title">Please enter your credentials</string>
    <string name="login_error"> Username or password is incorrect</string>
    <string name="sw2_account_username">Username</string>
    <string name="sw2_account_username_hint">Username</string>
    <string name="sw2_account_password">Password</string>
    <string name="sw2_account_password_hint">Password</string>
    <string name="sw2_security">Security</string>
    <string name="sw2_security_ssl">SSL/TLS</string>
    <string name="login">Login</string>
    <string name="saveCredentials">   Save Credentials</string>

    <!-- About activity -->
    <string name="about_opendj">OpenDJ Contact Manager is a sample application of the OpenDJ open source Project, demonstrating the use of REST APIs to access directory data.
 OpenDJ is an LDAPv3 and REST compliant directory service, developed for the Java platform, providing a high performance, highly available, and secure store for the identities managed by your organization.</string>
    <string name="about_website">www.forgerock.com </string>

    <!-- Status messages -->
    <string name="warning_delete_server">Delete server %s</string>
    <string name="warning_approval">Are you sure?</string>
    <string name="warning_selected_server">%s is set as default server</string>
    <string name="warning_call_number">Call %s?</string>
    <string name="warning_no_result_found">No result</string>
    
    <!-- test -->
    <string name="text1"></string>
    <string name="text2"></string>
    <string name="btn_next">Next</string>
    

</resources>