<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/sw2_upper_bar_layout"
        style="@style/UpperBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/sw2_image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/settings_title_description"
            android:paddingLeft="5dip"
            android:src="@drawable/ic_action_settings" />

        <TextView
            android:id="@+id/sw2_title"
            style="@style/UpperBarTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/sw2_image_title"
            android:text="@string/sw2_title" />

        <View
            style="@style/androidSeparator"
            android:layout_width="fill_parent"
            android:layout_below="@+id/sw2_image_title"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="5sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/sw2_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sw2AccountLowerBarLayout"
        android:layout_below="@+id/sw2_upper_bar_layout" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="370dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:descendantFocusability="beforeDescendants" >

            <TextView
                android:id="@+id/sw2AccountStaticTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/sw2_account_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/sw2StaticAccountServerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sw2AccountStaticTitle"
                android:layout_marginTop="30dp"
                android:text="@string/sw2_account_username"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/defaultStringSize" />

            <EditText
                android:id="@+id/sw2EditAccountUserName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sw2StaticAccountServerName"
                android:ems="10"
                android:hint="@string/sw2_account_username_hint"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:maxLength="39"
                android:singleLine="true"
                android:focusableInTouchMode="true" >

                <requestFocus android:layout_width="wrap_content" />
            </EditText>

            <TextView
                android:id="@+id/sw2StaticAccountServerPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sw2EditAccountUserName"
                android:text="@string/sw2_account_password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/defaultStringSize"  />

            <EditText
                android:id="@+id/sw2EditAccountServerPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sw2StaticAccountServerPassword"
                android:ems="10"
                android:hint="@string/sw2_account_password_hint"
                android:inputType="textPassword"
                android:maxLength="25"
                android:singleLine="true"
                android:textSize="@dimen/defaultStringSize" >

                <requestFocus android:layout_width="wrap_content" />
            </EditText>
            

      

             <CheckBox
                 android:id="@+id/saveCredentials"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/sw2EditAccountServerPassword"
                 android:layout_marginTop="28dp"
                 android:text="@string/saveCredentials"
                 android:textColorLink="@color/white"
                 android:textSize="@dimen/defaultStringSize" />

             <TextView
                 android:id="@+id/loginError"
                 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/sw2EditAccountServerPassword"
                 android:text="@string/login_error"
                 android:textColor="@color/red" />

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/sw2AccountLowerBarLayout"
        style="@style/BottomBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <View
            style="@style/androidSeparator"
            android:layout_width="fill_parent"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="0sp" />
        
        <Button
            android:id="@+id/btn_login"
            style="@style/NextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="30sp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/login"
            android:textAlignment="center" />
    </RelativeLayout>

</RelativeLayout>