<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/ctUpperBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="45sp"
        android:background="@color/generalBackgroundColor"
        android:orientation="horizontal" >
    	
    	<ImageButton
            android:id="@+id/ctArrowRightHeaderBtn"
            android:layout_width="45sp"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:background="@drawable/common_buttons_actions"
            android:contentDescription="@string/arrow_description"
            android:paddingLeft="10dp"
            android:scaleType="fitStart"
            android:src="@drawable/arrow_left" />
    	
    	<TextView
    	    android:id="@+id/ctName"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentTop="true"
    	    android:layout_toRightOf="@+id/ctArrowRightHeaderBtn" 
            android:ellipsize="marquee"
    	    android:fadingEdge="horizontal"
    	    android:focusable="true"
    	    android:focusableInTouchMode="true"
    	    android:marqueeRepeatLimit="1"
    	    android:maxLines="1"
    	    android:scrollHorizontally="true"
    	    android:singleLine="true"
    	    android:textAlignment="center"
    	    android:textColor="@color/textPrimaryColor"
    	    android:textScaleX="1.5"
    	    android:textSize="@dimen/defaultHeaderSize"
    	    android:textStyle="bold" />
    	    <!-- android:layout_toLeftOf="@+id/ctAddBtn" 
    	    android:layout_toRightOf="@+id/ctArrowRightHeaderBtn" -->
    	    
   </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/ctImageLayout"
        android:layout_width="fill_parent"
        android:layout_height="90sp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/ctLeftImageLayout"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/contact_designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:maxLines="1"
                android:paddingLeft="15sp"
                android:textAlignment="viewStart"
                android:textColor="@color/textPrimaryColor"
                android:text="@string/designation"
                android:textSize="@dimen/defaultTitleSize" 
                android:singleLine="true"
    	        android:textScaleX="1.5"
    	        android:textStyle="bold"
    	        android:layout_marginBottom="10dp"
    	        android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/contact_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact_designation"
                android:maxLines="1"
                android:singleLine="true"
                android:paddingLeft="15sp"
                android:text="@string/product_team"
                android:textAlignment="viewStart"
                android:textColor="@color/textPrimaryColor"
                android:textSize="@dimen/defaultTitleSize"
                android:textScaleX="1.5"
    	        android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/ctPhoto"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:scaleType="fitEnd"
            android:layout_weight="0.4"
            android:contentDescription="@string/photo_description"
            android:paddingRight="10sp" />
            <!-- android:src="@drawable/avatar_female_gray_frame_200x200" />  -->

    </LinearLayout>
    
    
    	<TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:textSize="17sp"
        android:textStyle="bold" />
    
    	<TextView
        android:id="@+id/mobile_number_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/contact_mobile_title" /> 
        
    	<TextView
    	    android:id="@+id/mobile_number"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginBottom="10dp"
    	    android:clickable="true"
    	    android:drawableRight="@drawable/ic_action_call"
    	    android:onClick="onClick"
    	    android:paddingLeft="6dip"
    	    android:paddingTop="6dip"
    	    android:textSize="17sp"
    	    android:textStyle="bold" />
        
    	<View
    	android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
        
    	<TextView
        android:id="@+id/home_number_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:textSize="17sp"
        android:textStyle="bold" 
        android:text="@string/contact_home_phone_title" />
    
    	<TextView
        android:id="@+id/home_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:textSize="17sp"
        android:textStyle="bold"
        android:drawableRight="@drawable/ic_action_call"  />
    	
    	<View
    	android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    
    	<TextView
        android:id="@+id/email_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:textSize="17sp"
        android:textStyle="bold" 
        android:text="@string/contact_mail_title" />
    
    
    	<TextView
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:textSize="17sp"
        android:textStyle="bold" 
        android:drawableRight="@drawable/ic_action_email" />
    	
    	<View
    	android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
</LinearLayout>